--- a/.github/workflows/auto-pr-and-merge.yml
+++ b/.github/workflows/auto-pr-and-merge.yml
@@ -13,7 +13,8 @@ jobs:
 
       # 2. Create Pull Request
       - name: Create PR from jeffrey to master
-        uses: peter-evans/create-pull-request@v5
+        uses: peter-evans/create-pull-request@v5 
+        id: create-pr 
         with:
           title: "Auto PR: jeffrey → master"
           body: "Automated PR created from jeffrey branch"
@@ -24,7 +25,9 @@ jobs:
 
       # 3. Auto-merge PR (if checks pass)
       - name: Auto-merge PR
-        if: steps.create-pr.outputs.pull-request-number != '' # Only run if previous steps succeed
+        if: |
+          steps.create-pr.outcome == 'success' &&
+          steps.create-pr.outputs.pull-request-number != ''
         uses: actions/github-script@v6
         with:
           script: |
